--- a/platforms/android/src/main/assets/app/app.css
+++ b/platforms/android/src/main/assets/app/app.css
@@ -6,8 +6,8 @@
 }
 
 .btn-form {
-    font-size: 12px;
-    height: 60px;
+    font-size: 12;
+    height: 40;
     text-align: center;
     vertical-align: center;
 }
